--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
                 height : 500,
                 width : 500,
                 id : "gallery",
-                transition_in : Animations.dissolve_in,
-                transition_out : Animations.dissolve_out,
+                transition_in : Animations.burn_in,
+                transition_out : Animations.burn_out,
                 images: ["./stl.jpeg", "./nyc.jpeg", "./paris.jpeg", "./opilio.png", "./jason3.png", ],
                 timer : 5000
             }
@@ -39,7 +39,10 @@
             -webkit-transition: width .5s, height .5s; /* Safari and Chrome */
             -o-transition:      width .5s, height .5s; /* Opera */
             /* style */
-            border: 10px solid black;
+            width: 300px;
+            height: 200px;
+            padding: 5px;
+            border: 5px solid #333;
             -webkit-box-shadow: 0px 1px 50px 1px #CCC;
             box-shadow:         0px 10px 30px 0px #CCC;
         }
