added left and right bar

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             -webkit-transition: width .5s, height .5s; /* Safari and Chrome */
             -o-transition:      width .5s, height .5s; /* Opera */
             /* style */
-            width: 100%;
-            height: 100%;
+            width: 100px;
+            height: 100px;
             padding: 5px;
             border: 5px solid #333;
             -webkit-box-shadow: 0px 1px 50px 1px #CCC;
@@ -69,6 +69,8 @@
             -webkit-transition: width .5s, height .5s; /* Safari and Chrome */
             -o-transition:      width .5s, height .5s; /* Opera */
             /*  style    */
+            width: 500px;
+            height: 100px;
             display: inline-block;
         }
         
